fix spacing at bottom of page

--- a/src/app/[locale]/globals.module.scss
+++ b/src/app/[locale]/globals.module.scss
@@ -1,6 +1,7 @@
 .body {
 	background-color: var(--color-neutral);
 	padding: 40px;
+	margin-bottom: 40px;
 
 	h1,
 	h2,
